# WLog

./: .gitignore  AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt  FixBuffer.hpp  Logger.cpp  Logger.h  README.md
include/: AsyncLog.h  FixBuffer.h  LogEvent.h  LogFormatter.h  LogLever.h  Logger.h  Singleton.h  Wlog.h
src/: AsyncLog.cpp  LogEvent.cpp  LogFormatter.cpp  LogLever.cpp  Logger.cpp
test1/: CMakeLists.txt  test.cc
